# covering-codes

./: Readme.rst
cxx/: .gitignore  Makefile.am  Params.hh  config.h.in  configure.ac  gen-solution.cc  init_perfect.cc  perfect_codes_size_check.cc
cxx/lib/: abn.hh
cxx/tests/: abn_test.cc
results/3/1/3/: ub-3-1-3-5-generated.yaml
results/3/1/5/: lb-27-Kamps-Lint-1967.yaml  ub-27-trivial.yaml
results/3/2/3/: ub-3-2-3-3-generated.yaml
results/3/2/4/: ub-3-2-4-3-generated.yaml
results/3/3/4/: ub-3-3-4-3-generated.yaml
