tests_abn_test_PROGRAMS = tests/abn_test
tests_abn_test_SOURCES = tests/abn_test.cc
tests_abn_testdir = tests

bin_init_perfect_PROGRAMS = bin/init_perfect
bin_init_perfect_SOURCES = init_perfect.cc
bin_init_perfectdir = bin
bin_init_perfect_LDFLAGS=-lboost_program_options

bin_perfect_codes_size_check_PROGRAMS = bin/perfect_codes_size_check
bin_perfect_codes_size_check_SOURCES = perfect_codes_size_check.cc
bin_perfect_codes_size_checkdir = bin
bin_perfect_codes_size_check_LDFLAGS = -lgmp -lboost_program_options

bin_gen_solution_PROGRAMS = bin/gen-solution
bin_gen_solution_SOURCES = gen-solution.cc
bin_gen_solutiondir = bin
bin_gen_solution_LDFLAGS = -lboost_program_options
